--- a/static/css/my.css
+++ b/static/css/my.css
@@ -3,10 +3,11 @@
  *
  */
 
+
 body, ul, ol, dl, td, th, caption, pre, p, blockquote, input, textarea, table {
     color: #333333;
     font-family: Arial;
-    line-height: 150%;
+    /* line-height: 150%; */
 }
 
 a {
@@ -62,18 +63,16 @@ img {
 	border-radius: 8px;
 }
 
-#my-interior {
-}
-
 body {
 	background-attachment: scroll;
+	overflow-y: scroll;
     background-clip: border-box;
 	background: #f2f1e7 url("/static/image/back.png");
 	background-repeat: repeat-x;
 	background-origin: padding-box;
 	background-position: 0 0;
 	background-size: auto auto;
-	margin-top: 5px;
+	margin: 0px;
 }
 
 input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
@@ -81,22 +80,28 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 }
 
 #my-siteContain {
-	background-color: #fcfcfc;
 	margin: 0 auto;
 	width: 950px;
+	min-height: 800px;
 }
 
 /**/
 #my-header {
-	background-color: #3b89ba;
+	/* background-color: #3b89ba; #2D2D2D*/
+	background-color: #6aa;
 	float: left;
-	width: 950px;
-	height: 100px;
+	width: 100%;
+	height: 80px;
 	background-repeat: no-repeat;
 	background-position: left top;
+	opacity: 1.0;
+	/*
+	width: 950px;
+	height: 100px;
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
 	border-radius: 8px;
+	*/
 	-webkit-box-shadow: 3px 3px 6px #666; 
 	-moz-box-shadow: 3px 3px 6px #666; 
 	box-shadow: 3px 3px 6px #666;
@@ -119,16 +124,27 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 
 #my-navigation-home{
 	background-image: url("/static/image/logo.png");
-	float: left;
-	background-color: #3b89ba;
-	width: 240px;
-	height: 80px;
-	margin-top: 8px;
+	/* background-color: #3b89ba; */
+	/* height: 80px; */
+	/* 
+	color: #49495D;
+	*/
 	background-repeat: no-repeat;
 	background-position: left center;
-	-moz-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border-radius: 8px;
+	float: left;
+	text-decoration: none;
+	width: 240px;
+	height: 60px;
+	margin-top: 8px;
+	margin-left: 24px;
+	font-style: italic;
+	font-size: 48px;
+	color: #000;
+	font-weight; bold;
+	text-shadow: 8px 8px 8px #333333;
+	-moz-border-radius: 16px;
+	-webkit-border-radius: 16px;
+	border-radius: 16px;
 }
 
 #my-navigation a:link,
@@ -147,6 +163,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 #my-navigation li:hover a:active,
 #my-navigation .selected,
 #my-navigation .selected a{
+	text-decoration: none;
 	font-weight: bold;
 	text-align: center;
 	color: yellow;
@@ -198,10 +215,11 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 
 .simple-list h1 {
 	padding-left: 10px;
-	padding-top: 10px;
+	padding-top: 16px;
+	padding-bottom: 16px;
 	margin-left: 4px;
 	margin-right: 4px;
-	border-bottom: 2px solid #656f7a;
+	/* border-bottom: 2px solid #656f7a; */
 }
 
 .simple-list ul {
@@ -273,6 +291,10 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 	font-weight: bold;
 }
 
+.blog-attrs{
+	margin-bottom: 16px;
+}
+
 .blog-item .blog-head, .blog-attr, .blog-content{
 	margin: 2px;
 	padding: 2px;
@@ -283,15 +305,27 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 }
 
 .simple-list .blog-li {
-	#border-top: 1px dashed #3B89BA;
+	border: 1px solid #fff;
+	border-top: 1px dashed #3B89BA;
 	padding-top: 8px;
 	padding-bottom: 16px;
 	margin-bottom: 10px;
+	/* background: #EDF4F1; */
 }
 
+.simple-list .blog-li:hover {
+	/* border: 1px solid #FFAC4D; */
+}
+
+.simple-list #photo-ul {
+	border-top: 1px dashed #3B89BA;
+}
+
+/*
 .simple-list .blog-li:nth-child(even) {
 	background: #EDF4F1;
 }
+*/
 
 /*
  * split page
@@ -316,8 +350,11 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 	margin-right: 0.6em;
 	padding: 0.5em;
 }
+.splitpage li.pageindex{
+	padding: 0px;
+}
 
-.splitpage li.pageindex,
+.splitpage li.pageindex a,
 .splitpage li.selectpage{
 	display: block;
 	padding: 0.2em 0.5em;
@@ -406,8 +443,9 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 .widget-side ul li.selected a:before {
     color: #40495B;
     font-weight: bold;
-	content: "=>";
+	/* content: "=>"; */
 	padding-right: 0.3em;
+	content: "@ ";
 }
 
 .widget-side ul li.selected a {
@@ -502,21 +540,27 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 }
 
 #my-footer {
-	margin-top: 8px;
-	background-color: #3b89ba;
+	background-color: #6aa;
 	float: left;
-	width: 950px;
-	margin-bottom: 16px;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-position: left top;
+	opacity: 1.0;
+
+	margin-top: 8px;
+	/*
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
 	border-radius: 8px;
+	*/
 	-webkit-box-shadow: 3px 3px 6px #666; 
 	-moz-box-shadow: 3px 3px 6px #666; 
 	box-shadow: 3px 3px 6px #666;
 }
 
 #my-footer p {
-	color: #EAEAEA;
+	color: #000;
+	font-weight: bold;
 	font-size: 1.2em;
 	text-align: center;
 	margin: 8px;
