--- a/py/templates/loginview.html
+++ b/py/templates/loginview.html
@@ -34,7 +34,9 @@
 	</div>
 </div>
 
+<%def name='loadjs()'>
 <script type="text/javascript" src="/static/js/md5.js"></script>
 <script type="text/javascript">
 	$(initLoginView);
 </script>
+</%def>
