--- a/py/templates/mgruserview.html
+++ b/py/templates/mgruserview.html
@@ -59,6 +59,7 @@
 	</div>
 </div>
 
+<%def name='loadjs()'>
 % if mgrprivilege:
 <script type="text/javascript">
 $(function(){
@@ -73,6 +74,7 @@ $(function(){
 
 </script>
 % endif
+</%def>
 
 <%def name="navmgrtype()">user</%def>
 
