--- a/py/templates/photoview.html
+++ b/py/templates/photoview.html
@@ -14,6 +14,7 @@
 </div>
 <div class="splitpagediv"><ul class="splitpage"></ul></div>
 
+<%def name='loadjs()'>
 <script type="text/javascript">
 	var bedit = false;
 	% if mgrprivilege:
@@ -22,3 +23,4 @@
 	$(function(){splitpage("/rest/photo/", "/rest/photo/list/", 
 				1, ${photocount}, 6, {bedit: bedit}, showphoto);});
 </script>
+</%def>
