--- a/py/templates/mgruserview.html
+++ b/py/templates/mgruserview.html
@@ -8,39 +8,39 @@
 			<!--
 			<div><label>id:</label><label name="id"></label></div>
 			-->
-			<div>
+			<div class="form-item">
 				<label>id ：</label>
 				<input class="input-text" disabled="disabled" type="text" name="id" value=""></input>
 			</div>
-			<div>
+			<div class="form-item">
 				<label>用户名：</label>
 				<input class="input-text" type="text" maxlength="64" name="name" value=""></input>
 			</div>
-			<div>
+			<div class="form-item">
 				<label>姓名：</label>
 				<input class="input-text" type="text" maxlength="64" name="localname" value=""></input>
 			</div>
-			<div>
+			<div class="form-item">
 				<label>密码：</label>
 				<input class="input-text" type="password" name="passwd" maxlength="64" value=""></input>
 			</div>
-			<div>
+			<div class="form-item">
 				<label>确认密码：</label>
 				<input class="input-text" type="password" name="verifypasswd" maxlength="64" value=""></input>
 			</div>
-			<div>
+			<div class="form-item">
 				<label>email：</label>
 				<input class="input-text" type="text" name="email" maxlength="128" value=""></input>
 			</div>
-			<div>
+			<div class="form-item">
 				<label>手机：</label>
 				<input class="input-text" type="text" name="mobilephone" maxlength="64" value=""></input>
 			</div>
-			<div>
+			<div class="form-item">
 				<label>描述：</label>
 				<textarea type="text" name="description" maxlength="1024"></textarea>
 			</div>
-			<div>
+			<div class="form-item">
 				<label>权限：</label>
 				<select>
 					<option value="0">普通用户</option>
