--- a/py/templates/mgrphotoview.html
+++ b/py/templates/mgrphotoview.html
@@ -7,17 +7,27 @@
 		% if mgrprivilege:
 		<form action="xxx" class="photoform" method="post" enctype="multipart/form-data"
 			target="ifsubmit">
-			<div><label>id:</label><label name="id"></label></div>
-			<div><label>标题:</label></div>
-			<div><input type="text" name="name" value="" /></div>
-			<div><label>描述:</label></div>
-			<div><textarea name="description" ></textarea></div>
+			<div class="form-item">
+				<label>id:</label><label name="id"></label>
+			</div>
+			<div class="form-item">
+				<label>标题:</label>
+				<input type="text" name="name" value="" />
+			</div>
+			<div class="form-item">
+				<label>描述:</label>
+				<textarea name="description" ></textarea>
+			</div>
 			% if photoid is None:
-			<div><label>上传文件:</label></div>
-			<div><input type="file" id="uploadfile" onchange="showimg(this)" name="content"></input></div>
+			<div class="form-item">
+				<label>上传文件:</label>
+				<input type="file" id="uploadfile" onchange="showimg(this)" name="content"></input>
+			</div>
 			% endif
-			<img src="" id="imgphoto" width="600"></img>
-			<div>
+			<div class="form-item">
+				<img src="" id="imgphoto" width="600"></img>
+			</div>
+			<div class="form-item">
 				<label>权限：</label>
 				<select name="privilege">
 					<option value="-1">匿名可读</option>
