--- a/static/css/my.css
+++ b/static/css/my.css
@@ -67,7 +67,8 @@ body {
 	background-attachment: scroll;
 	overflow-y: scroll;
     background-clip: border-box;
-	background: #f2f1e7 url("/static/image/back.png");
+	/* background: #f2f1e7 url("/static/image/back.png"); */
+	background: #E5ECCA;
 	background-repeat: repeat-x;
 	background-origin: padding-box;
 	background-position: 0 0;
@@ -75,8 +76,21 @@ body {
 	margin: 0px;
 }
 
+input[type="text"], input[type="password"], textarea{
+	float: left;
+	padding: 8px;
+	margin-top: 5px;
+	margin-bottom: 15px;
+	border: 1px solid #cccccc;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075) inset;
+	width: 100%;
+}
+
 input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
-	background-color: #ffc;
+	/* border: 1px solid #51A7E8; */
+	border-color: #51A7E8;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.075) inset, 0 0 5px rgba(81,167,232,0.5);
+	/* background-color: #ffc; */
 }
 
 #my-siteContain {
@@ -236,6 +250,12 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 	padding-right: 10px;
 }
 
+.form-item{
+	float: left;
+	width: 100%;
+	margin-bottom: 10px;
+}
+
 .morecontent {
 	float: right;
 	margin-right: 4px;
@@ -247,16 +267,20 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 }
 
 .mgr-content{
+	float: left;
+	width: 100%;
 }
 
 .mgr-content form{
+	float: left;
+	width: 95%;
 	padding: 10px;
 }
 
 .mgr-content label, .mgr-content input, .mgr-content select, .mgr-content textarea{
-	width: 680px;
-	margin: 10px 0px;
-	resize: none;
+	float: left;
+	width: 100%;
+	margin: 0px 0px 5px 0px;
 }
 
 .mgr-content button{
@@ -350,11 +374,8 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 	margin-right: 0.6em;
 	padding: 0.5em;
 }
-.splitpage li.pageindex{
-	padding: 0px;
-}
 
-.splitpage li.pageindex a,
+.splitpage li.pageindex,
 .splitpage li.selectpage{
 	display: block;
 	padding: 0.2em 0.5em;
@@ -453,25 +474,27 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
     font-weight: bold;
 }
 
+#login-info{
+	float: left;
+	width: 100%;
+	border-top: 1px dashed #3B89BA;
+}
+
 #login-form{
 	float: left;
-	background: #f0efec;
+	/* background: #f0efec; */
 	margin: 10px;
 	padding: 20px;
-	width: 320px;
+	width: 300px;
 }
 
-#login-form label{
+#login-form label, .login-item{
 	float: left;
-	margin: 10px;
-	margin-left: 0px;
-	width: 90px;
+	width: 100%;
 }
 
-#login-form input{
-	margin: 10px;
-	margin-left: 0px;
-	width: 160px;
+#login-form input[type='button']{
+	width: 100%;
 }
 
 #login-form #authphoto{
@@ -479,21 +502,28 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 }
 
 #login-form img{
+	float: left;
 	margin: 10px;
-	margin-left: 0px;
-	width: 160px;
 }
 
 #login-help{
-	background: #fffeb6;
 	float: left;
-	margin: 10px;
-	padding: 10px;
-	width: 280px;
+	/* background: #f0efec; */
+	margin-left: 0px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	padding: 20px;
+	padding-left: 0px;
+	width: 100%;
+
+	background: #fffeb6;
 	border: 1px solid #888800;
 }
 
 #login-help span{
+	float: left;
+	width: 100%;
+	text-align: center;
 	display: inline-block;
 	word-wrap: break-word;
 	word-break: break-all;
@@ -504,33 +534,6 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 	color: red;
 	font: bold;
 	text-align: center;
-	margin-top: 64px;
-}
-
-#userform{
-	float: left;
-	background: #f0efec;
-	margin: 10px;
-	padding: 20px;
-	width: 660px;
-}
-
-#userform label{
-	float: left;
-	margin: 10px;
-	margin-left: 0px;
-	width: 90px;
-}
-
-#userform input, #userform textarea, #userform select{
-	margin: 10px;
-	margin-left: 0px;
-	width: 320px;
-	resize: none;
-}
-
-#userform textarea{
-	height: 160px;
 }
 
 #userform #new, #userform #delete, #userform #submit{
