--- a/py/templates/mgrphotoview.html
+++ b/py/templates/mgrphotoview.html
@@ -5,7 +5,7 @@
 	<div class="mgr-content">
 		<h1>相片管理</h1>
 		% if mgrprivilege:
-		<form action="xxx" class="photoform" method="post" enctype="multipart/form-data"
+		<form action="" class="photoform" method="post" enctype="multipart/form-data"
 			target="ifsubmit">
 			<div class="form-item">
 				<label>id:</label><label name="id"></label>
@@ -63,6 +63,3 @@
 </script>
 % endif
 </%def>
-
-<%def name="navmgrtype()">photo</%def>
-
