--- a/static/css/my.css
+++ b/static/css/my.css
@@ -4,13 +4,14 @@
  */
 
 body {
-    font-family: Arial;
+	font-family: "Lucida Grande","Microsoft YaHei","WenQuanYi Micro Hei",sans-serif;
 }
 
 ul, ol, dl, td, th, caption, pre, p, blockquote, input, textarea, table {
     color: #333333;
+	/*
     font-family: Arial;
-    /* line-height: 150%; */
+    line-height: 150%; */
 }
 
 a {
