--- a/py/templates/photoview.html
+++ b/py/templates/photoview.html
@@ -9,7 +9,7 @@
 
 <div class="simple-list">
 <h1>照片<span>风景 旅游</span></h1>
-<ul id="photo-ul">
+<ul id="photo-ul" class="popup-gallery">
 </ul>
 </div>
 <div class="splitpagediv"><ul class="splitpage"></ul></div>
